<resources>
    <string name="app_name">Secret Key</string>
    <string name="activity_clone_name">Clone a Git repo</string>
    <string name="clone_settings">Clone</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_delete_title">Directory already exist</string>
    <string name="dialog_delete_msg">Target directory already exist. Current version support only a single store. Do you want to delete the current password store directory:</string>
    <string name="dialog_delete">Delete directory</string>
    <string name="dialog_do_not_delete">Cancel</string>
    <string name="title_activity_git_clone">Repository information</string>
    <string name="creation_dialog_text">Please clone or create a new repository below before trying to add a password or any synchronization operation.</string>
	<string name="store_git">/store/.git</string>
    <string name="key_dialog_text">You have to select your "PGP-Key ID" before initializing the repository</string>
    <string name="connection_dialog_text">Which connection method do you prefer?</string>
    <string name="delete_dialog_text">Are you sure you want to delete the password /"</string>
    <string name="initialization_commit_text">[ANDROID PwdStore] Initialized store with keyID: </string>
    <string name="add_commit_text">[ANDROID PwdStore] Add &#160;</string>
    <string name="remove_commit_text">[ANDROID PwdStore] Remove &#160;</string>
    <string name="edit_commit_text">[ANDROID PwdStore] Edit &#160;</string>
    <string name="from_store">&#160; from store.</string>
    <string name="provider_toast_text">No OpenPGP Provider selected!</string>
    <string name="okc_progress_text">Waiting for OpenKeychain...</string>
    <string name="clipboard_beginning_toast_text">Password copied to clipboard, you have </string>
    <string name="clipboard_ending_toast_text"> seconds to paste it somewhere.</string>
    <string name="name_settings_toast_text">Please set your account name in settings whenever you can</string>
    <string name="account_settings_dialog_text">Please set your OpenKeychain account (email) in the preferences</string>
    <string name="account_settings_dialog_title">Account name empty!</string>
    <string name="file_toast_text">Please provide a file name</string>
    <string name="empty_toast_text">You cannot use an empty password or empty extra content</string>
    <string name="running_dialog_text">Running command...</string>
    <string name="jgit_error_dialog_title">An error occurred during a Git operation</string>
    <string name="jgit_error_dialog_text">Message from jgit: \n</string>
    <string name="read_only_dialog_text">You are about to use a read-only repository, you will not be able to push to it</string>
    <string name="forget_username_dialog_text">Did you forget to specify a username?</string>
    <string name="set_information_dialog_text">You have to set the information about the server before synchronizing with the server</string>
    <string name="ssh_preferences_dialog_text">Please import or generate your SSH key file in the preferences</string>
    <string name="ssh_preferences_dialog_title">No SSH key</string>
    <string name="ssh_preferences_dialog_import">Import</string>
    <string name="ssh_preferences_dialog_generate">Generate</string>
    <string name="passphrase_dialog_title">Authenticate</string>
    <string name="passphrase_dialog_text">Please provide the passphrase for your SSH key. Leave it empty if there is no passphrase.</string>
    <string name="password_dialog_text">Please provide the password for this repository</string>
    <string name="clone_fragment_text">Welcome to Password Store\n\n In this screen you can either create a new repository or clone your git repository onto your device.</string>
    <string name="clone">Clone from server</string>
    <string name="initialize">Use local directory</string>
    <string name="server_name">Server</string>
    <string name="server_protocol">Protocol</string>
    <string name="server_url">Server URL</string>
    <string name="server_url_hint">server.com</string>
    <string name="server_port_hint">22</string>
    <string name="default_ssh_port">22</string>
    <string name="default_https_port">443</string>
    <string name="server_path">Repo path</string>
    <string name="server_path_hint">path/to/pass</string>
    <string name="server_user">Username</string>
    <string name="server_user_hint">git_username</string>
    <string name="server_resulting_url">Resulting URL</string>
    <string name="connection_mode">Authentication Mode</string>
    <string name="warn_malformed_url_port">When using custom ports, provide an absolute path (starts with "/")</string>
    <string name="title_activity_pgp_handler">PgpHandler</string>
    <string name="crypto_name_hint">name</string>
    <string name="crypto_pass_label">Password</string>
    <string name="crypto_extra_label">Extra</string>
    <string name="crypto_category">Category</string>
    <string name="action_search">Search</string>
    <string name="pref_git_title">Git</string>
    <string name="pref_server_title">Server</string>
    <string name="pref_server_hint">server.com</string>
    <string name="pref_remote_title">Remote location</string>
    <string name="pref_remote_hint">path/to/repository</string>
    <string name="pref_git_username_title">Username</string>
    <string name="pref_git_username_hint">username</string>
    <string name="pref_edit_server_info">Edit git server settings</string>
    <string name="pref_ssh_title">Import SSH key</string>
    <string name="pref_ssh_keygen_title">Generate SSH key pair</string>
    <string name="pref_ssh_see_key_title">View generated public SSH key</string>
    <string name="pref_git_delete_repo">Delete repository</string>
    <string name="pref_dialog_delete_title">Clear repository</string>
    <string name="pref_dialog_delete_msg">Do you want to delete the current password store directory? This will not clear your configuration.</string>
    <string name="pref_crypto_title">Crypto</string>
    <string name="pref_provider_title">Select OpenPGP Provider</string>
    <string name="pref_provider_account_title">Set your OpenPGP account</string>
    <string name="pref_provider_account_hint">mail@somewhere.tld</string>
    <string name="pref_key_title">Select OpenPGP Key id</string>
    <string name="pref_general_title">General</string>
    <string name="pref_password_title">Password Show Time</string>
    <string name="pref_password_dialog_title">Set the time you want the password to be in clipboard</string>
    <string name="pref_copy_title">Automatically Copy Password</string>
    <string name="pref_copy_dialog_title">Automatically copy the password to the clipboard after decryption was successful.</string>
    <string name="ssh_key_success_dialog_title">SSH-key imported</string>
    <string name="ssh_key_error_dialog_title">Error while trying to import the ssh-key</string>
    <string name="ssh_key_error_dialog_text">Message : \n</string>
    <string name="pref_recursive_filter">Recursive filtering</string>
    <string name="pref_recursive_filter_hint">Recursively find passwords of the current directory.</string>
    <string name="pref_autofill_title">Autofill</string>
    <string name="pref_autofill_enable_title">Enable autofill</string>
    <string name="pref_autofill_enable_msg">Tap OK to go to Accessibility settings. There, tap Password Store under Services then tap the switch in the top right to turn it on or off.</string>
    <string name="pref_autofill_enable_msg2">Once the service is on, a dialog will appear when you click on a password field in an app if a matching password for the app exists.</string>
    <string name="pref_autofill_enable_msg3">Password Store attempts to match apps with passwords automatically. You can change this default setting and also matching settings per-app.</string>
    <string name="pref_autofill_apps_title">App and website settings</string>
    <string name="pref_autofill_apps_hint">Customize autofill settings for specific apps.</string>
    <string name="pref_autofill_default_title">Automatically match by default</string>
    <string name="pref_autofill_default_hint">Default to \'Automatically match\' for apps without custom settings. Otherwise, \'Never match.\'</string>
    <string name="pref_autofill_always_title">Always show dialog</string>
    <string name="pref_misc_title">Misc</string>
    <string name="pref_clear_clipboard_title">Clear clipboard 20 times</string>
    <string name="pref_clear_clipboard_hint">Store nonsense in the clipboard 20 times instead of just once. Useful on Samsung phones that feature clipboard history.</string>
    <string name="pref_git_delete_repo_summary">Deletes local (hidden) repository</string>
    <string name="pref_external_repository">External repository</string>
    <string name="pref_external_repository_summary">Use an external password repository</string>
    <string name="pref_select_external_repository">Select external repository</string>
    <string name="pwgen_generate">Generate</string>
    <string name="pwgen_include">Include</string>
    <string name="pwgen_length">Length</string>
    <string name="pwgen_numerals">Numerals</string>
    <string name="pwgen_symbols">Symbols</string>
    <string name="pwgen_uppercase">Uppercase</string>
    <string name="pwgen_ambiguous">Ambiguous</string>
    <string name="pwgen_pronounceable">Pronounceable</string>
    <string name="ssh_keygen_length">Length</string>
    <string name="ssh_keygen_passphrase">Passphrase</string>
    <string name="ssh_keygen_comment">Comment</string>
    <string name="ssh_keygen_generate">Generate</string>
    <string name="ssh_keygen_copy">Copy</string>
    <string name="ssh_keygen_tip">Provide this public key to your Git server.</string>
    <string name="ssh_keygen_show_passphrase">Show passphrase</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_positive">On my way...</string>
    <string name="dialog_negative">Nah... later</string>
    <string name="dialog_oops">Oops...</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="git_sync">Synchronize repository</string>
    <string name="git_pull">Pull from remote</string>
    <string name="git_push">Push to remote</string>
    <string name="show_password_pref_title">Show the password</string>
    <string name="show_password_pref_summary">Control the visibility of the passwords once decrypted, this does not disable the password copy</string>
    <string name="toast_password_copied">Password copied into the clipboard</string>
    <string name="pwd_generate_button">Generate</string>
    <string name="category_string">"Category: "</string>
    <string name="autofill_description">Autofills password fields in apps. Only works for Android versions 4.3 and up. Does not rely on the clipboard for Android versions 5.0 and up.</string>
    <string name="autofill_fill">Fill</string>
    <string name="autofill_apps_default">Use default setting</string>
    <string name="autofill_apps_first">Automatically match</string>
    <string name="autofill_apps_match_ellipsis">Match with…</string>
    <string name="autofill_apps_match">Match with</string>
    <string name="autofill_apps_never">Never match</string>
    <string name="autofill_apps_delete">Delete</string>
    <string name="refresh_list">Refresh list</string>
    <string name="settings">Settings</string>
    <string name="no_repo_selected">No external repository selected</string>
    <string name="no_repo_selected2">No external repository selected</string>
    <string name="send_plaintext_password_to">Send password as plaintext using…</string>
    <string name="show_password">Show password</string>
</resources>