<?xml version="1.0" encoding="utf-8"?>

<!--CODE EMPRUNTÉ :-->
<!--Les lignes suivantes proviennent du projet open source-->
<!--Android-Password-Store sous license GPL 3.0 de l'auteur Zeapo-->

<!--Le code de ce fichier sert à faire l'affichage du menu des paramètres-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_crypto_title">
        <org.openintents.openpgp.util.OpenPgpAppPreference
            android:key="openpgp_provider_list"
            android:title="@string/pref_provider_title" />
        <Preference
            android:key="openpgp_key_id_pref"
            android:title="@string/pref_key_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_general_title">
        <EditTextPreference
            android:defaultValue="45"
            android:dialogTitle="@string/pref_password_dialog_title"
            android:inputType="number"
            android:key="general_show_time"
            android:summary="@string/pref_password_dialog_title"
            android:title="@string/pref_password_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/show_password_pref_title"
            android:summary="@string/show_password_pref_summary"
            android:key="show_password" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dialogTitle="@string/pref_copy_dialog_title"
            android:key="copy_on_decrypt"
            android:summary="@string/pref_copy_dialog_title"
            android:title="@string/pref_copy_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="clear_after_copy"
            android:summary="After an automatic copy or a manual copy of the password, the clipboard will be automatically cleared."
            android:title="Automatically clear the clipboard after copy" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="filter_recursively"
            android:summary="@string/pref_recursive_filter_hint"
            android:title="@string/pref_recursive_filter" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_misc_title">
        <Preference
            android:key="export_passwords"
            android:title="Export Passwords"
            android:summary="Exports the encrypted passwords to an external directory"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="clear_clipboard_20x"
            android:summary="@string/pref_clear_clipboard_hint"
            android:title="@string/pref_clear_clipboard_title" />
    </PreferenceCategory>
</PreferenceScreen>

<!--FIN DU CODE EMPRUNTÉ-->
